<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carmen SanDiego</string>
    <string name="ubicacion">Estás en:</string>
    <string name="ordenTitle">Emitir orden de arresto</string>
    <string name="ordenEmitida">Orden de arresto contra:</string>
    <string name="emitirTitle">Emitir orden contra:</string>
    <string name="action_settings">Settings</string>
    <string name="viajar_button">Viajar</string>
    <string name="volver_button">Volver</string>
    <string name="pistas_button">Buscar Pistas</string>
    <string name="orden_button">Orden de Arresto</string>
    <string name="resolver_button">Resolver Misterio</string>
    <string name="emitir_button">Emitir Orden</string>
    <string name="iniciar_button">Iniciar Juego</string>
    <string name="pistasTitle">Pedir Pistas</string>
    <string name="viajarTitle">Viajar</string>
    <string name="conexion_button">Pais a Viajar</string>

</resources>